<resources>
    <string name="app_name">STC-VIT</string>
    <string name="title_home">Home</string>
    <string name="title_resources">Resources</string>
    <string name="title_explore">Explore</string>
    <string name="title_about">About</string>
    <string name="contentDescription">imageView</string>
    <string name="select_a_domain">Select a domain</string>
    <string name="domain">Domain</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="on_boarding_1">Confused about which tech domain to choose and how to progress ahead?</string>
    <string name="on_boarding_2">Get domain wise learning roadmaps and detailed resources</string>
    <string name="on_boarding_3">Learn and grow along with us!
        Welcome to the STC app</string>
    <string name="expected_salary_2">The data may vary with location and population changes</string>
    <string name="expected_salary_1">Avg Salary Expectation</string>
    <string name="choose_domain_helper_text">The best and trusted resources for you to get started</string>
    <string name="event_image">Event Image</string>
    <string name="stc_logo">STC LOGO</string>
    <string name="project_idea">Project Idea</string>
    <string name="project_idea_helper">Have a great project idea? Reach out to us and we’ll help you make it happen :)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="idea">Idea</string>
    <string name="description">Description</string>
    <string name="post">POST</string>
    <string name="member_photo">Member Photo</string>
    <string name="feed_image">Feed Image</string>
    <string name="project_logo">Project Logo</string>
    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="feedback">Give us a feedback</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="linked_in">Linked In</string>
    <string name="github">GitHub</string>
    <string name="illustration_credits">Illustration credits - Freepik stories</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="on_boarding">On boarding</string>
    <string name="continue_btn">Continue</string>
    <string name="next_btn">Next</string>
    <string name="more">Read More</string>
    <string name="retry">Retry</string>
    <string name="no_results">No results</string>
    <string name="error_feed">Unable to fetch feed! Please try again</string>
    <string name="placeholder_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent porttitor tellus a varius suscipit. Mauris vel odio ac justo venenatis sodales.</string>
    <string name="about_text">Student Technical Community is a student community in VIT Vellore aimed at enhancing skills of its members in various domains through quality projects and events tailored for cutting edge skill development</string>
    <string name="the_team">The Team</string>
</resources>