<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mstc.mstcapp.ui.home.FeedFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_swipe_recycler" />


    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.mstc.mstcapp.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_resources"
        android:name="com.mstc.mstcapp.ui.resources.DomainsFragment"
        android:label="@string/title_resources"
        tools:layout="@layout/fragment_resources">
        <action
            android:id="@+id/action_navigation_resources_to_navigation_view_resource_activity"
            app:destination="@id/navigation_view_resource_activity" />
    </fragment>
    <activity
        android:id="@+id/navigation_view_resource_activity"
        android:name="com.mstc.mstcapp.ViewResourceActivity"
        android:label="View Resources"
        tools:layout="@layout/activity_view_resource">
        <argument
            android:name="domain"
            app:argType="com.mstc.mstcapp.model.Domain" />
    </activity>
</navigation>