<?xml version="1.0" encoding="utf-8"?>


<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

<!--            <ProgressBar-->
<!--                android:id="@+id/loading"-->
<!--                style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:indeterminate="true"-->
<!--                android:indeterminateTint="@color/colorPrimary"-->
<!--                android:visibility="gone" />-->

            <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/retry"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/body1" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    app:cardBackgroundColor="?attr/color_salary_card"
                    app:cardCornerRadius="@dimen/margin_small"
                    app:cardElevation="0dp"
                    app:contentPadding="@dimen/margin_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expected_salary_1"
                            android:textAppearance="@style/body2" />

                        <TextView
                            android:id="@+id/salary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textAppearance="@style/heading1" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:text="@string/expected_salary_2"
                            android:textAppearance="@style/body2" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
